// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS AnimateAndFade should render correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;

exports[`iOS AnimateAndFade should render correctly when show is false 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": 0.01,
      "opacity": 0,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;

exports[`iOS AnimateAndFade should render correctly with animateOnEnter 1`] = `
<View
  collapsable={undefined}
  shown={true}
  style={
    Object {
      "height": 0.01,
      "opacity": 0,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;

exports[`iOS AnimateAndFade should render correctly with animateOnLeave 1`] = `
<View
  collapsable={undefined}
  shown={true}
  style={
    Object {
      "height": 0.01,
      "opacity": 0,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;
